--- a/indexx.html
+++ b/indexx.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Dashboards by Keen IO</title>
+  <title>Dashboards by sensee.ca</title>
   <meta charset="utf-8">
   <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
   <link rel="stylesheet" type="text/css" href="//cloud.typography.com/737368/747986/css/fonts.css">
