--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
           </div>
         </div>
       </div>
-  
-
+    </div>
+<div class="row">
       <div class="col-sm-4 col-md-4">
         <div class="chart-wrapper">
           <div class="chart-title">
@@ -227,7 +227,7 @@ Keen.ready(function(){
         width: "auto",
         chartOptions: {
           chartOptions: {
-            isStacked: false
+            isStacked: true
           }
         }
       });
