--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
       <div class="col-sm-8">
         <div class="chart-wrapper">
           <div class="chart-title">
-            Cell Title
+            KWhr
           </div>
           <div class="chart-stage">
-            <div id="grid-1-1">
-              <img data-src="holder.js/100%x240/white/text:#grid-1-1">
+            <div id="mychart">
+             
             </div>
           </div>
           <div class="chart-notes">
-            Notes about this chart
+            TODAY
           </div>
         </div>
       </div>
