--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
             KWhr
           </div>
           <div class="chart-stage">
-            <div id="mychart">
+            <div id="mycharttt">
              
             </div>
           </div>
           <div class="chart-notes">
-            TODAY
+            LAST 7 DAYS
           </div>
         </div>
       </div>
