--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             KWhr
           </div>
           <div class="chart-stage">
-            <div id="mychartt">
+            <div id="state">
              
             </div>
           </div>
