--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <img data-src="holder.js/100%x240/white">
+            <div id="mychartt">
           </div>
           <div class="chart-notes">
             Notes about this chart
