--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <div id="mychartt">
+            <div id="mycharttt">
           </div>
           <div class="chart-notes">
             Notes about this chart
