--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <img data-src="holder.js/100%x120/white">
+            <div id="mychart">
           </div>
           <div class="chart-notes">
             Notes about this chart
@@ -71,7 +71,7 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <img data-src="holder.js/100%x120/white">
+            <div id="mychartt">
           </div>
           <div class="chart-notes">
             Notes about this chart
