--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
   
   <div class="container-fluid">
 
-    <div class="row">
+<div class="row">
       <div class="col-sm-8">
         <div class="chart-wrapper">
           <div class="chart-title">
-            KWhr
+            Cell Title
           </div>
           <div class="chart-stage">
-            <div id="state">
-             
+            <div id="grid-1-1">
+              <img data-src="holder.js/100%x240/white/text:#grid-1-1">
             </div>
           </div>
           <div class="chart-notes">
-            LAST 7 DAYS
+            Notes about this chart
           </div>
         </div>
       </div>
@@ -39,7 +39,7 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <div id="mycharttt">
+            <img data-src="holder.js/100%x240/white">
           </div>
           <div class="chart-notes">
             Notes about this chart
@@ -55,7 +55,7 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <div id="mychart">
+            <img data-src="holder.js/100%x120/white">
           </div>
           <div class="chart-notes">
             Notes about this chart
@@ -68,7 +68,7 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <div id="mychartt">
+            <img data-src="holder.js/100%x120/white">
           </div>
           <div class="chart-notes">
             Notes about this chart
@@ -89,9 +89,54 @@
         </div>
       </div>
 <!-- end of three -->
+      <div class="col-sm-6 col-md-4">
+        <div class="chart-wrapper">
+          <div class="chart-title">
+            Cell Title
+          </div>
+          <div class="chart-stage">
+            <img data-src="holder.js/100%x120/white">
+          </div>
+          <div class="chart-notes">
+            Notes about this chart
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="chart-wrapper">
+          <div class="chart-title">
+            Cell Title
+          </div>
+          <div class="chart-stage">
+            <img data-src="holder.js/100%x120/white">
+          </div>
+          <div class="chart-notes">
+            Notes about this chart
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="chart-wrapper">
+          <div class="chart-title">
+            Cell Title
+          </div>
+          <div class="chart-stage">
+            <img data-src="holder.js/100%x120/white">
+          </div>
+          <div class="chart-notes">
+            Notes about this chart
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
        
     <hr>
 
+<p class="small text-muted">Built with &#9829; by <a href="https://keen.io">Marc</a></p>
+
+  </div>
 
 
   <script type="text/javascript" src="../../assets/lib/jquery/dist/jquery.min.js"></script>
