--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <div id="grid-1-1">
-              <img data-src="holder.js/100%x240/white/text:#grid-1-1">
+            <div id="state">
             </div>
           </div>
           <div class="chart-notes">
@@ -39,7 +38,7 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <img data-src="holder.js/100%x240/white">
+            <div id="mychart">
           </div>
           <div class="chart-notes">
             Notes about this chart
@@ -55,7 +54,7 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <img data-src="holder.js/100%x120/white">
+            <div id="mychartt">
           </div>
           <div class="chart-notes">
             Notes about this chart
@@ -68,7 +67,7 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <img data-src="holder.js/100%x120/white">
+            <div id="mycharttt">
           </div>
           <div class="chart-notes">
             Notes about this chart
