--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           </div>
           <div class="chart-stage">
             <div id="mychart">
+            </div>
           </div>
           <div class="chart-notes">
             Notes about this chart
@@ -56,7 +57,8 @@
           <div class="chart-stage">
             <div id="mychartt">
           </div>
-          <div class="chart-notes">
+           </div>
+            <div class="chart-notes">
             Notes about this chart
           </div>
         </div>
@@ -69,7 +71,8 @@
           <div class="chart-stage">
             <div id="mycharttt">
           </div>
-          <div class="chart-notes">
+           </div>
+            <div class="chart-notes">
             Notes about this chart
           </div>
         </div>
