--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ Keen.ready(function(){
         }
       });
       
-        client.draw(lastmonth, document.getElementById("lastmonthchart), {
+        client.draw(lastmonth, document.getElementById("lastmonthchart"), {
         chartType: "metric",
         title: "this month",
         height: "250",
