--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ Keen.ready(function(){
       
         client.draw(lastmonth, document.getElementById("lastmonthchart"), {
         chartType: "metric",
-        title: "this month",
+        title: "last month",
         height: "250",
         width: "auto",
           chartOptions: {
