--- a/indexx.html
+++ b/indexx.html
@@ -65,8 +65,8 @@
       <div class="row">
 
         <div class="col-sm-6">
-          <h2><a href="./examples/">Examples</a></h2>
-          <a href="./examples/"><img class="img-responsive img-thumbnail" src="./examples/starter-kit/preview.png"></a>
+          <h2><a href="./prototypes/proto1">proto1</a></h2>
+          <a href="./prototypes/proto1"><img class="img-responsive img-thumbnail" src="./examples/starter-kit/preview.png"></a>
         </div>
 
         <div class="col-sm-6">
