--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
       <div class="row">
 
         <div class="col-sm-6">
-          <h2><a href="./prototypes/proto1">proto1</a></h2>
-          <a href="./prototypes/proto1"><img class="img-responsive img-thumbnail" src="./examples/starter-kit/preview.png"></a>
+          <h2><a href="./prototypes/index.html">proto1</a></h2>
+          <a href="./prototypes/index.html"><img class="img-responsive img-thumbnail" src="./examples/starter-kit/preview.png"></a>
         </div>
 
         <div class="col-sm-6">
