--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <span class="icon-bar"></span>
           </button>
           <a href="http://sensee.ca" class="navbar-brand" target="_blank">
-            <svg class="keen-logo" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 594 128" enable-background="new 0 0 594 128" xml:space="preserve">
+            <svg class="sensit-logo" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 594 128" enable-background="new 0 0 594 128" xml:space="preserve">
               <g class="icon">
                 <polygon class="red" fill="#FFFFFF" points="59.811,73.135 66.859,85.34 49.275,115.863 140.807,115.863 147.814,128 28.045,128"></polygon>
                 <polygon class="green" fill="#FFFFFF" points="59.873,24.297 91.504,79.242 77.413,79.242 59.826,48.781 13.958,128 0,128"></polygon>
@@ -46,7 +46,7 @@
         </nav>
       </header>
 
-      <h1>Dashboards</h1>
+      <h1>your iot dashboards</h1>
       <p class="lead">Responsive dashboard templates for Bootstrap</p>
       <a class="btn hero-btn" href="https://github.com/keen/dashboards" target="_blank">Source Code on Github</a>
 
