--- a/index.html
+++ b/index.html
@@ -46,15 +46,8 @@
         </nav>
       </header>
 
-      <h1>your iot dashboards</h1>
-      <p class="lead">Responsive dashboard templates for Bootstrap</p>
-      <a class="btn hero-btn" href="https://github.com/keen/dashboards" target="_blank">Source Code on Github</a>
-
-      <iframe src="http://ghbtns.com/github-btn.html?user=keen&amp;repo=dashboards&amp;type=watch&amp;count=true"
-        allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
-      <iframe src="http://ghbtns.com/github-btn.html?user=keen&amp;repo=dashboards&amp;type=fork&amp;count=true"
-        allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
-
+      <h1>your iot dashboard</h1>
+      
     </div>
   </div>
   
