--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
   <div class="footer">
     <div class="container">
       <div class="love">
-        <p>Made with &#9825; in San Francisco</p>
-        <p>&copy; 2012&ndash;2015 <a href="https://keen.io">Keen IO</a></p>
+        <p>Made with &#9825; in Moncton</p>
+        <p>&copy; 2012&ndash;2015 <a href="http://sensee.ca">Marc</a></p>
       </div>
     </div>
   </div>
