--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         </div>
 
         <div class="col-sm-6">
-          <h2><a href="./layouts/">Layouts</a></h2>
-          <a href="./layouts/"><img class="img-responsive img-thumbnail" src="./layouts/quarter-grid/preview.png"></a>
+          <h2><a href="./prototypes/index.html">proto2</a></h2>
+          <a href="./prototypes/index.html"><img class="img-responsive img-thumbnail" src="./examples/starter-kit/preview.png"></a>
         </div>
 
       </div>
