--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
        
       </header>
 
-      <h1>your iot data... by sensee.ca</h1>
+      <h1>your IoT data... by sensee.ca</h1>
       
     </div>
   </div>
