--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -161,6 +161,13 @@ Keen.ready(function(){
   
     var monthchart = new Keen.Query("count", {
     eventCollection: "kWhr",
+          filters: [
+    {
+        "operator": "eq",
+        "property_name": "coreid",
+        "property_value": "48ff6e065067555013541287"
+    }],
+      
     interval:"daily",
     timeframe: "this_7_days",
     timezone: "America/Sao_Paulo"
@@ -200,6 +207,13 @@ Keen.ready(function(){
   
   var state = new Keen.Query("count", {
     eventCollection: "kWhr",
+              filters: [
+    {
+        "operator": "eq",
+        "property_name": "coreid",
+        "property_value": "48ff6e065067555013541287"
+    }],
+    
     groupBy: [
     "event"
 ],
