--- a/proto2/index.html
+++ b/proto2/index.html
@@ -207,6 +207,13 @@ Keen.ready(function(){
   
   var state = new Keen.Query("count", {
     eventCollection: "kWhr",
+        filters: [
+    {
+        "operator": "eq",
+        "property_name": "coreid",
+        "property_value": "51ff67065067545711360687"
+    }
+],
     groupBy: [
     "event"
 ],
