--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <div class="col-sm-6">
           <h2><a href="./prototypes/index.html">proto1</a></h2>
-          <a href="./prototypes/index.html"><img class="img-responsive img-thumbnail" src="./examples/starter-kit/preview.png"></a>
+          <a href="./prototypes/index.html"><img class="img-responsive img-thumbnail" src="house-128.png"></a>
         </div>
 
         <div class="col-sm-6">
