--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <div class="col-sm-6">
           <h2><a href="./prototypes/index.html">proto2</a></h2>
-          <a href="./proto2/index.html"><img class="img-responsive img-thumbnail" src="./examples/starter-kit/preview.png"></a>
+          <a href="./proto2/index.html"><img class="img-responsive img-thumbnail" src="house-128 blue.png"></a>
         </div>
 
       </div>
