--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="container">
       <div class="love">
         <p>Made with &#9825; in Moncton</p>
-        <p>&copy; 2016 <a href="http://sensee.ca">Marc</a></p>
+        <p>&copy; 2016 <a href="http://sensee.ca">sensee.ca</a></p>
       </div>
     </div>
   </div>
