--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -100,7 +100,7 @@
        
     <hr>
 
-<p class="small text-muted">Built with &#9829; by <a href="https://keen.io">Marc</a></p>
+<p class="small text-muted">Built with &#9829; by <a href="http://sensee.ca">sensee.ca</a></p>
 
   </div>
 
