--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
        
       </header>
 
-      <h1>your IoT data...</h1>
+      <h1>sensee.ca</h1>
      <h3>your IoT data...</h3>
       
     </div>
