--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
        
       </header>
 
-      <h1>sensee.ca</h1>
-     <h3>your IoT data...</h3>
+      <h1>IoT + analytics</h1>
+     <h3>your data by sensee.ca</h3>
       
     </div>
   </div>
