--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </header>
 
       <h1>IoT + analytics</h1>
-     <h3>your data by sensee.ca</h3>
+     <h3>your data... sensee.ca</h3>
       
     </div>
   </div>
