--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
        
       </header>
 
+      <h1>sensee.ca</h1>
       <h1>IoT + analytics</h1>
-     <h3>your data... sensee.ca</h3>
+     <h3>your data...</h3>
       
     </div>
   </div>
