--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -217,7 +217,7 @@ Keen.ready(function(){
 ],
     interval: "hourly",
     timeframe: "this_1_days",
-    timezone: "UTC"
+    timezone: "America/Sao_Paulo"
   });
   
   var cycle = new Keen.Query("count", {
