--- a/proto2/index.html
+++ b/proto2/index.html
@@ -221,8 +221,8 @@ Keen.ready(function(){
     "event"
 ],
     interval: "hourly",
-    timeframe: "this_2_days",
-    timezone: "UTC"
+    timeframe: "this_1_days",
+    timezone: "America/Sao_Paulo"
   });
   
   var cycle = new Keen.Query("count", {
