--- a/index.html
+++ b/index.html
@@ -41,21 +41,18 @@
       
     </div>
   </div>
-  
-
-
 
   <div class="content">
     <div class="container">
       <div class="row">
 
         <div class="col-sm-4">
-          <h2><a href="./prototypes/index.html">proto1</a></h2>
+          <h2><a href="./prototypes/index.html"></a></h2>
           <a href="./prototypes/index.html"><img class="img-responsive img-thumbnail" src="house-128.png"></a>
         </div>
 
         <div class="col-sm-4">
-          <h2><a href="./prototypes/index.html">proto2</a></h2>
+          <h2><a href="./prototypes/index.html"></a></h2>
           <a href="./proto2/index.html"><img class="img-responsive img-thumbnail" src="house-128 blue.png"></a>
         </div>
 
