--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -153,7 +153,7 @@ Keen.ready(function(){
         "property_value": "48ff6e065067555013541287"
     }
 ],
-    timeframe: "last_30_days",
+    timeframe: "previous_1_months",
     timezone: "America/Sao_Paulo"
   });
   
