--- a/proto2/index.html
+++ b/proto2/index.html
@@ -158,7 +158,7 @@ Keen.ready(function(){
         "property_value": "51ff67065067545711360687"
     }
 ],
-    timeframe: "last_30_days",
+    timeframe: "previous_1_months",
     timezone: "America/Sao_Paulo"
   });
   
