--- a/proto2/index.html
+++ b/proto2/index.html
@@ -145,7 +145,7 @@ Keen.ready(function(){
         "property_value": "51ff67065067545711360687"
     }
 ],
-    timeframe: "this_30_days",
+    timeframe: "this_1_months",
     timezone: "America/Sao_Paulo"
   });
   
