--- a/proto2/index.html
+++ b/proto2/index.html
@@ -172,7 +172,7 @@ Keen.ready(function(){
     }
 ],
     interval:"daily",
-    timeframe: "this_7_days",
+    timeframe: "this_1_weeks",
     timezone: "America/Sao_Paulo"
   });
   
@@ -250,7 +250,7 @@ Keen.ready(function(){
     groupBy: [
     "data"
 ],
-    timeframe: "this_30_days",
+    timeframe: "this_1_months",
     timezone: "America/Sao_Paulo"
   });
   
