--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -140,7 +140,7 @@ Keen.ready(function(){
         "property_value": "48ff6e065067555013541287"
     }
 ],
-    timeframe: "this_30_days",
+    timeframe: "this_1_months",
     timezone: "America/Sao_Paulo"
   });
   
@@ -167,7 +167,7 @@ Keen.ready(function(){
     }],
       
     interval:"daily",
-    timeframe: "this_7_days",
+    timeframe: "this_1_weeks",
     timezone: "America/Sao_Paulo"
   });
   
@@ -245,7 +245,7 @@ Keen.ready(function(){
     groupBy: [
     "data"
 ],
-    timeframe: "this_30_days",
+    timeframe: "this_1_months",
     timezone: "America/Sao_Paulo"
   });
   
