--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -21,14 +21,14 @@
       <div class="col-sm-6 col-md-4">
         <div class="chart-wrapper">
           <div class="chart-title">
-            Cell Title
+            
           </div>
           <div class="chart-stage">
             <div id="mychart">
           </div>
            </div>
             <div class="chart-notes">
-            Notes about this chart
+            kWhr
           </div>
         </div>
       </div>
