--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -21,7 +21,7 @@
       <div class="col-sm-6 col-md-4">
         <div class="chart-wrapper">
           <div class="chart-title">
-            
+            Cell title
           </div>
           <div class="chart-stage">
             <div id="mychart">
