--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -92,7 +92,51 @@
           </div>
         </div>
       </div>
-  
+      <div class="row">
+      <div class="col-sm-6 col-md-4">
+        <div class="chart-wrapper">
+          <div class="chart-title">
+            Cell title
+          </div>
+          <div class="chart-stage">
+            <div id="mychart">
+          </div>
+           </div>
+            <div class="chart-notes">
+            kWhr
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="chart-wrapper">
+          <div class="chart-title">
+            Cell Title
+          </div>
+          <div class="chart-stage">
+            <div id="mychartt">
+          </div>
+           </div>
+            <div class="chart-notes">
+            Notes about this chart
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="chart-wrapper">
+          <div class="chart-title">
+            Cell Title
+          </div>
+          <div class="chart-stage">
+          <div id="lastmonthchart">
+          </div>
+          </div>
+          <div class="chart-notes">
+            Notes about this chart
+          </div>
+        </div>
+      </div>
+          </div>
+<!-- end of three -->
     <hr>
 
 <p class="small text-muted">   Built with &#9829; by <a href="http://sensee.ca">sensee.ca</a></p>
