--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -92,52 +92,36 @@
           </div>
         </div>
       </div>
-      <div class="row">
-      <div class="col-sm-6 col-md-4">
-        <div class="chart-wrapper">
-          <div class="chart-title">
-            Cell title
-          </div>
-          <div class="chart-stage">
-            <div id="mychart">
-          </div>
-           </div>
-            <div class="chart-notes">
-            kWhr
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-4">
+  <div class="row">
+      <div class="col-sm-8">
         <div class="chart-wrapper">
           <div class="chart-title">
             Cell Title
           </div>
           <div class="chart-stage">
-            <div id="mychartt">
-          </div>
-           </div>
-            <div class="chart-notes">
-            Notes about this chart
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-4">
-        <div class="chart-wrapper">
-          <div class="chart-title">
-            Cell Title
-          </div>
-          <div class="chart-stage">
-          <div id="lastmonthchart">
-          </div>
+            <div id="state">
+            </div>
           </div>
           <div class="chart-notes">
             Notes about this chart
           </div>
         </div>
       </div>
+      <div class="col-sm-4">
+        <div class="chart-wrapper">
+          <div class="chart-title">
+            Cell Title
           </div>
-<!-- end of three -->
-    <hr>
+          <div class="chart-stage">
+            <div id="mycharttt">
+            </div>
+          </div>
+          <div class="chart-notes">
+            Notes about this chart
+          </div>
+        </div>
+  
+      <hr>
 
 <p class="small text-muted">   Built with &#9829; by <a href="http://sensee.ca">sensee.ca</a></p>
 
