--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -92,6 +92,7 @@
           </div>
         </div>
       </div>
+  
   <div class="row">
       <div class="col-sm-8">
         <div class="chart-wrapper">
@@ -120,7 +121,7 @@
             Notes about this chart
           </div>
         </div>
-  
+      </div>
       <hr>
 
 <p class="small text-muted">   Built with &#9829; by <a href="http://sensee.ca">sensee.ca</a></p>
