--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -92,7 +92,8 @@
           </div>
         </div>
       </div>
-  
+  </div>
+    
   <div class="row">
       <div class="col-sm-8">
         <div class="chart-wrapper">
@@ -122,6 +123,7 @@
           </div>
         </div>
       </div>
+    
       <hr>
 
 <p class="small text-muted">   Built with &#9829; by <a href="http://sensee.ca">sensee.ca</a></p>
