--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -101,7 +101,7 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <div id="state">
+            <div id="temperature">
             </div>
           </div>
           <div class="chart-notes">
@@ -115,7 +115,7 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <div id="mycharttt">
+            <div id=" ">
             </div>
           </div>
           <div class="chart-notes">
