--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -387,7 +387,7 @@ client.draw(leader, document.getElementById("leader"), {
 
   
   client.draw(temperature, document.getElementById("temperature"), {
-        chartType: "line",
+        chartType: "linechart",
        title: "Temperature outside", 
         height: "250",
         width: "auto",
