--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -338,7 +338,7 @@ Keen.ready(function(){
         }
       });      
       client.draw(monthchart, document.getElementById("mycharttt"), {
-        chartType: "columnchart",
+        chartType: "linechart",
         title: "daily",
         height: "250",
         width: "auto",
