--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -283,6 +283,13 @@ Keen.ready(function(){
   
   var temperature = new Keen.Query("maximum", {
     eventCollection: "kWhr",
+    filters: [
+    {
+        "operator": "eq",
+        "property_name": "event",
+        "property_value": "name"
+    }
+],
     interval: "hourly",
     targetProperty: "temperature",
     timeframe: "this_1_days",
@@ -374,7 +381,7 @@ client.draw(leader, document.getElementById("leader"), {
   
   
   client.draw(state, document.getElementById("state"), {
-        chartType: "columchart",
+        chartType: "columnchart",
        title: "kWhr", 
         height: "250",
         width: "auto",
