--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -380,7 +380,7 @@ client.draw(leader, document.getElementById("leader"), {
         width: "auto",
           chartOptions: {
             chartOptions: {
-            isStacked: true
+            isStacked: false
           }
         }
       });
