--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -289,6 +289,7 @@ Keen.ready(function(){
     timezone: "America/Sao_Paulo"
   });
     
+  
        // and draw a column chart
      client.draw(today, document.getElementById("mychart"), {
         chartType: "metric",
@@ -373,14 +374,14 @@ client.draw(leader, document.getElementById("leader"), {
   });
   
   
-  client.draw(state, document.getElementById("state"), {
+  client.draw(temperature, document.getElementById("temperature"), {
         chartType: "columnchart",
        title: "kWhr", 
         height: "250",
         width: "auto",
           chartOptions: {
             chartOptions: {
-            isStacked: false
+            isStacked: true
           }
         }
       });
