--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -387,7 +387,7 @@ client.draw(leader, document.getElementById("leader"), {
       });
 
   
-  client.draw(temperature, document.getElementById("temperature"), {
+  client.draw(state, document.getElementById("state"), {
         chartType: "linechart",
        title: "Temperature outside", 
         height: "250",
