--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -70,7 +70,7 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <div id="state">
+            <div id="temperature">
             </div>
           </div>
           <div class="chart-notes">
