--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -101,7 +101,7 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <div id="pageviews">
+            <div id="data">
             </div>
           </div>
           <div class="chart-notes">
